<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Share via HTTP</string>

    <string name="header_msg">The chosen file(s) is/are avaliable here:</string>
    <string name="standar_url">http://127.0.0.1/</string>    



	<string name="technical_info">Technical restrictions: On 3G, the file transfer will be slow but everybody will have access to it. On WiFi, transfers will be fast but only people on the same network (LAN) will be able to access your files. </string>
    <string name="barcode_scanner_msg">Also, if you install the <a href="http://market.android.com/details?id=com.google.zxing.client.android">Barcode Scanner</a>, this URL can be sent as a barcode as well.</string>
        
    <string name="button_rate">Rate this App</string>
    <string name="change_ip">Choose the IP Address</string>
    <string name="share_containing_folder">Share Containing Folder</string>
    <string name="share_url">Share URL</string>
    <string name="stop_server">Stop Server</string>    
       
    
    <string name="now_sharing_anymore">The requested file is not being shared anymore.</string>
     
     
     
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    
        
   
</resources>
